Fixed z-index for header so that nav-menu appears on top of content

--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -89,6 +89,6 @@ body
   font-size: 18px
   line-height: 1.6
   font-family: 'Karla' sans-serif
-  color: $color4
+  color: rgba(255, 201, 20, 1)
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
