--- a/assets/css/3-sections/header.sass
+++ b/assets/css/3-sections/header.sass
@@ -27,6 +27,7 @@
 			height: 80px
 			padding: 0
 			margin: 0
+			z-index: 2
 
 		.site-nav
 			ul
@@ -81,6 +82,7 @@
 			margin-right: 20px
 			align-items: center
 			cursor: pointer
+			z-index: 2
 
 			span,
 			span:before,
@@ -101,7 +103,7 @@
 				bottom: 17px
 
 			&.is-open span
-				background: rgba(215, 38, 61, 1)
+				background: transparent
 
 			&.is-open span:before,
 			&.is-open span:after
@@ -116,6 +118,7 @@
 	.mobile-nav
 		display: none
 		position: absolute
+		z-index: 1
 		width: 100%
 		background: rgba(215, 38, 61, 1)
 		padding: 30px 0 20px
@@ -130,6 +133,7 @@
 		li
 			text-align: center
 			margin-bottom: 10px
+			position: relative
 
 
 @media (max-width: 775px)
@@ -164,3 +168,4 @@
 			// transition: all 0.3s ease-in-out
 			 */
 			transform: translateY(0%)
+			
